tests/errors/sem3.kt
//variable used before initialized
fun main() {
    println(x) 
    val x = 5
}